--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "pub": "cd dist && yarn publish"
+    "pub": "cd dist && yarn publish",
+    "test": "jest --testTimeout 150000"
   },
   "author": "Bisonai",
   "devDependencies": {
-    "typescript": "^4.8.3"
+    "@types/jest": "^29.0.3",
+    "@types/chai": "^4.2.0",
+    "dotenv": "^16.0.2",
+    "jest": "^29.1.1",
+    "typescript": "^4.8.3",
+    "ts-jest": "^29.0.2"
   },
   "publishConfig": {
     "registry": "https://bisonai-831311642255.d.codeartifact.us-west-2.amazonaws.com/npm/bisonai/"
