--- a/package.json
+++ b/package.json
@@ -1,31 +1,32 @@
 {
   "name": "@bisonai/sbt-js",
-  "version": "0.1.0",
-  "description": "",
+  "version": "0.2.0",
+  "description": "Javascript interface to control deployed @bisonai/sbt-contracts",
   "files": [
-    "src",
     "dist"
   ],
   "main": "dist/index.js",
+  "license": "UNLICENSED",
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "pub": "cd dist && yarn publish",
-    "test": "jest --testTimeout 150000"
+    "test": "jest --testTimeout 150000",
+    "clean": "rm -rf node_modules dist"
   },
   "author": "Bisonai",
   "devDependencies": {
-    "@types/jest": "^29.0.3",
     "@types/chai": "^4.2.0",
+    "@types/jest": "^29.0.3",
     "dotenv": "^16.0.2",
     "jest": "^29.1.1",
-    "typescript": "^4.8.3",
-    "ts-jest": "^29.0.2"
+    "ts-jest": "^29.0.2",
+    "typescript": "^4.8.3"
+  },
+  "dependencies": {
+    "@bisonai/sbt-contracts": "^0.2.0",
+    "caver-js": "^1.8.0"
   },
   "publishConfig": {
     "registry": "https://bisonai-831311642255.d.codeartifact.us-west-2.amazonaws.com/npm/bisonai/"
-  },
-  "dependencies": {
-    "caver-js": "^1.8.0"
   }
 }
