--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bisonai/sbt-js",
-  "version": "0.2.0-demo",
+  "version": "0.2.0-demo2",
   "main": "dist/src/index.js",
   "description": "Javascript interface to control deployed @bisonai/sbt-contracts",
   "files": [
@@ -24,7 +24,7 @@
     "typescript": "^4.8.3"
   },
   "dependencies": {
-    "@bisonai/sbt-contracts": "0.2.0-demo",
+    "@bisonai/sbt-contracts": "0.2.0-demo2",
     "caver-js": "^1.8.0"
   },
   "publishConfig": {
