--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/chai": "^4.2.0",
     "@types/jest": "^29.0.3",
+    "chai": "^4.3.6",
     "dotenv": "^16.0.2",
     "jest": "^29.1.1",
     "ts-jest": "^29.0.2",
