--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bisonai/sbt-js",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "main": "dist/src/index.js",
   "description": "Javascript interface to control deployed @bisonai/sbt-contracts",
   "files": [
@@ -11,7 +11,8 @@
   "scripts": {
     "build": "tsc",
     "test": "jest --testTimeout 150000",
-    "clean": "rm -rf node_modules dist"
+    "clean": "rm -rf node_modules dist",
+    "pub": "cd dist && yarn publish"
   },
   "author": "Bisonai",
   "devDependencies": {
