--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dist",
     "src"
   ],
-  "license": "UNLICENSED",
+  "license": "Apache-2.0",
   "scripts": {
     "build": "tsc",
     "test": "jest --testTimeout 150000",
@@ -15,6 +15,7 @@
     "pub": "yarn publish"
   },
   "author": "Bisonai",
+  "homepage": "https://github.com/bisonai/sbt-js#readme",
   "devDependencies": {
     "@types/chai": "^4.2.0",
     "@types/jest": "^29.0.3",
