refactor: Remove caver and update tests

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,5 @@
-RUNNING_NETWORK = "baobab"
-SBT_CONTRACT_ADDRESS = 
+TEST_NETWORK=
 
-# Running on Baobab
-MNEMONIC0 = 
-MNEMONIC1 = 
-
-# Running on klaytonSandBox Localhost
-PRIVATEKEY0 = 
-PRIVATEKEY1 = 
+# These mnemonics are used only out of localhost network
+MNEMONIC0=
+MNEMONIC1=
