chore: Update comments in .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,12 @@
+# Network that will be used during test (yarn test). If TEST_LOGGER is
+# not setup localhost network will be utilized.
 TEST_NETWORK=
 
-# These mnemonics are used only out of localhost network
+# If TEST_LOGGER is set to any value, debug information will be
+# printed during test.
+TEST_LOGGER=
+
+# These mnemonics are used only during testing when other than
+# localhost network is used.
 MNEMONIC0=
 MNEMONIC1=
