--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "build": "tsc",
     "test": "jest --testTimeout 150000",
-    "clean": "rm -rf node_modules dist",
+    "clean": "rm -rf dist",
     "pub": "yarn publish"
   },
   "author": "Bisonai",
@@ -23,10 +23,12 @@
     "dotenv": "^16.0.2",
     "jest": "^29.1.1",
     "ts-jest": "^29.0.2",
-    "typescript": "^4.8.3"
+    "typescript": "^4.8.3",
+    "ts-node": "^10.9.1"
   },
   "dependencies": {
     "@bisonai/sbt-contracts": "0.3.0",
-    "ethers": "^5.7.2"
+    "ethers": "^5.7.2",
+
   }
 }
