chore: Improve text descriptions

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,8 @@ TEST_NETWORK=
 # printed during test.
 TEST_LOGGER=
 
-# These mnemonics are used only during testing when other than
-# localhost network is used.
+# The mnemonics below are used only when testing on networks other
+# than localhost. For testing on localhost, account information is
+# taken from deterministically generated accounts in Ganache.
 MNEMONIC0=
 MNEMONIC1=
