chore: grammarly fix

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-# Network that will be used during test (yarn test). If TEST_LOGGER is
-# not setup localhost network will be utilized.
+# A network that will be used during the test (yarn test). If TEST_LOGGER is
+# not set up localhost network will be utilized.
 TEST_NETWORK=
 
 # If TEST_LOGGER is set to any value, debug information will be
