--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@bisonai/sbt-js",
   "version": "0.4.0",
-  "main": "dist/src/index.js",
   "description": "Typescript interface to control SBT from @bisonai/sbt-contracts",
   "files": [
     "dist",
     "src"
   ],
+  "main": "dist/src/index.js",
   "author": "Bisonai",
   "homepage": "https://github.com/bisonai/sbt-js#readme",
   "license": "Apache-2.0",
@@ -23,11 +23,11 @@
     "dotenv": "^16.0.2",
     "jest": "^29.1.1",
     "ts-jest": "^29.0.2",
-    "typescript": "^4.8.3",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.3"
   },
   "dependencies": {
-    "@bisonai/sbt-contracts": "0.3.0",
+    "@bisonai/sbt-contracts": "^0.4.0",
     "ethers": "^5.7.2"
   }
 }
